--- a/EcommerceWeb/appsettings.json
+++ b/EcommerceWeb/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=.;Database=Ecommerce;Trust_Connection=True;TrustServerCertificate=True"
     }
-  },
-  "AllowedHosts": "*"
+
 }
