--- a/EcommerceWeb/appsettings.json
+++ b/EcommerceWeb/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=.;Database=Ecommerce;Trust_Connection=True;TrustServerCertificate=True"
+        "DefaultConnection": "Server=.;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True"
     }
 
 }
