Add UseAuthentication middleware Add _LoginPartial to _Layout

--- a/EcommerceWeb/appsettings.json
+++ b/EcommerceWeb/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EcommerceWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
